# autonomous-rover-swarm-coordination

./: .dockerignore  .editorconfig  .env.example  .gitignore  .opencode.json  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml  robot-framework.yml  security.yml
ci/: mosquitto.conf  owasp-zap.conf  prometheus.yml  trivy.yaml
ci/grafana-dashboards/: swarm-overview.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  SECURITY.md  SOFTWARE_TOOLS_INTEGRATION.md
scripts/: auto_commit.sh  bootstrap.sh  clean.sh  docker-build.sh  gen_certs.sh  run_robot_tests.sh
src/rover_swarm/: __init__.py  __main__.py  config.py  constants.py  exceptions.py  ground_station.py  logging_config.py  node.py  types.py
src/rover_swarm/ai/: __init__.py  base.py  engine_manager.py  llamacpp_engine.py  ollama_engine.py  sglang_engine.py  vllm_engine.py
src/rover_swarm/api/: __init__.py  app.py  dependencies.py  websocket.py
src/rover_swarm/api/routers/: auth.py  commands.py  data.py  missions.py  search.py  swarm.py  tasks.py  telemetry.py
src/rover_swarm/communication/: __init__.py  connection_manager.py  discovery.py  grpc_service.py  message_envelope.py  mqtt_client.py  network_simulator.py  websocket_bridge.py
src/rover_swarm/crdt/: __init__.py  base.py  gcounter.py  gset.py  lwwmap.py  lwwreg.py  merge_engine.py  mission_state.py  mvreg.py  orset.py  pncounter.py  rga.py  rover_state.py  serialization.py  swarm_state.py  vector_clock.py
src/rover_swarm/observability/: __init__.py  evaluation.py  logging_setup.py  metrics.py  telemetry.py
src/rover_swarm/security/: __init__.py  audit.py  auth.py  input_validator.py  rate_limiter.py  tls.py
src/rover_swarm/sensor/: __init__.py  base.py  drivers.py  fusion.py  pipeline.py
src/rover_swarm/simulation/: __init__.py  hil_bridge.py  swarm_simulator.py  terrain.py  visualizer.py
src/rover_swarm/swarm/: __init__.py  collision_avoidance.py  consensus.py  flocking.py  formation.py  gossip.py  health_monitor.py  mission_planner.py  path_planning.py  role_assignment.py  task_allocation.py
src/rover_swarm/vector_db/: __init__.py  base.py  chroma_db.py  lancedb_db.py  manager.py  milvus_db.py  qdrant_db.py  weaviate_db.py
tests/integration/: test_swarm_integration.py
tests/robot/: robot.yaml
tests/robot/integration/: test_api.robot  test_mqtt_sync.robot  test_swarm.robot
tests/robot/resources/: CrdtLibrary.py  common.robot  crdt_keywords.robot
tests/robot/security/: test_owasp_auth.robot  test_owasp_config.robot  test_owasp_data.robot  test_owasp_injection.robot
tests/robot/unit/: test_crdt.robot
tests/unit/: test_config.py  test_crdt.py  test_types.py
